Partial variant groups

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -12,7 +12,7 @@ table.prices {
     &.current { background-color: #ffffc0; }
 
     tr td label {
-      input { display: none; }
+      //input { display: none; }
       span {
         display: inline-block;
         border: thin solid grey;
