--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -80,10 +80,6 @@ ul#variants {
       display: flex;
       flex-flow: row;
 
-      div.properties {
-        flex: 10 1 auto;
-      }
-
       div.prices {
         flex: 1 1 100%;
         justify-content: flex-end;
@@ -126,7 +122,7 @@ dl#properties dd ul.swatches li a, .swatch {
     z-index: 1;
 
     color: white;
-    &.dark { color: black; }
+    &.light { color: black; }
   }
 
   img { z-index: 0; }
