--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@ body {
 }
 
 div#home {
-  color: white;
+  //color: white;
   text-align: center;
   //margin-left: auto;
   //margin-right: auto;
@@ -14,10 +14,10 @@ div#home {
   }
 
   h1 {
-    color: white;
+    //color: white;
   }
 
   h2 {
-    color: white;
+    //color: white;
   }
 }
